test/scc/pp/errors/050.a
050.t:2:6: error: expected an expression